syntax = "proto3";

package pb;
option go_package = "github.com/RafalSalwa/interview-app-srv/pb";

import "rpc_signup.proto";
import "user.proto";


service AuthService {
  rpc SignUpUser(SignUpUserInput) returns (GenericResponse) {}
  rpc VerifyEmail(VerifyEmailRequest) returns (GenericResponse) {}
}

message VerifyEmailRequest { string verificationCode = 1; }